Check not existance of the extant

BUG: 264187